Fixed h1 spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,7 @@ html {
 
 body {
 	width: 85%;
-	margin: 40px auto;
+	margin: 20px auto;
 	font-family: 'Sweety Bakery', 'Snippet', 'Heebo', sans-serif;
 	font-size: 2rem;
 	line-height: 1.7rem;
@@ -35,7 +35,7 @@ h1 {
     font-size: 4.5rem;
 	line-height: 5rem;
     color: $color-accent;
-	margin-bottom: 20px;
+	margin: 0;
 	text-align: center;
 }
 
